[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-heartbeat"
version = "0.1.0"
description = "Persistent OS-level scheduling for Claude Code CLI sessions"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "telethon>=1.36",
]

[project.scripts]
heartbeat = "heartbeat.cli:cli"

[tool.setuptools.packages.find]
include = ["heartbeat*"]
